--- a/pymaceuticals.ipynb
+++ b/pymaceuticals.ipynb
@@ -988,7 +988,7 @@
     "plt.xlabel(\"Drug Regimen\")\n",
     "plt.ylabel(\"Number of Mice Tested\")\n",
     "\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -1403,7 +1403,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.12 (main, Apr  4 2022, 05:22:27) [MSC v.1916 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
